--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a class="nav-link" href="#"><font size=5>Link</font></a>
       </li>
 	  <li class="nav-item">
-        <a class="nav-link" href="https://goo.gl/maps/AXgHAVWsRNFmgx8W9" target="_blank"><font size=5>Ubicacion</font></a>
+        <a class="nav-link" href="https://www.google.com/maps/dir/22.1287735,-100.9613441/mueblerias+en+slp/@22.1364644,-100.9664427,14z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x842aa234c0c9c297:0xdf49ae05d8f9faf6!2m2!1d-100.9365774!2d22.1360345" target="_blank"><font size=5>Ubicacion</font></a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><font size=5>
