--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</header>
 	
 	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand" href="#"><img src="imagenes/leon.jpg" whidth="25"></a>
+  <a class="navbar-brand" href="#"><img src="imagenes/mexicana.jpg" whidth="25"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
