--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a class="nav-link" href="#"><font size=5>Link</font></a>
       </li>
 	  <li class="nav-item">
-        <a class="nav-link" href="https://goo.gl/maps/YE7Pbct2PkJrg99L8"_blank"><font size=5>Ubicacion</font></a>
+        <a class="nav-link" href="https://goo.gl/maps/YE7Pbct2PkJrg99L8" target="_blank"><font size=5>Ubicacion</font></a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><font size=5>
