--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       <li class="nav-item">
         <a class="nav-link" href="galeria.html"><font size=5>Galeria</font></a>
       </li>
-	  <li class="nav-item">
+	  <!-- <li class="nav-item">
         <a class="nav-link" href="#"><font size=5>Link</font></a>
-      </li>
+      </li> -->
 	  <li class="nav-item">
         <a class="nav-link" href="https://goo.gl/maps/YE7Pbct2PkJrg99L8" target="_blank"><font size=5>Ubicacion</font></a>
       </li>
