--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="estilos.css">
 	<link rel="stylesheet" href="estilosimg.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script> 
+	$(document).ready(function(){
+  	$("#flip").click(function(){
+    	$("#panel").slideToggle("slow");
+  	});
+	});
+	</script>
+	#flip {
+ 	 padding: 5px;
+ 	 text-align: center;
+ 	 background-color: #e5eecc;
+ 	 border: solid 1px #c3c3c3;
+		}
 </head>
 <body>
 	<header>
@@ -14,7 +28,8 @@
 			<h1 class="text-center"> Mexicana de Muebles </h1>
 		</div>
 	</header>
-	
+	<div id="flip">Subir o bajar barra. </div>
+	<div id="panel">
 	<nav class="navbar navbar-expand-lg navbar-dark bg-danger">
   <a class="navbar-brand" href="#"><img src="imagenes/mexicana.jpg" whidth="25"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,6 +61,7 @@
     </ul>
   </div>
 </nav>
+</div>
 	
 	<div class="container">
 		<br>
